# DroneAI

./: .env  .gitignore  README.md  app.py  pyproject.toml  start.sh  test_backup.py
data/: drone_ai.sqlite3
models/: README.md
scripts/: inspect_embeddings.py
src/drone_ai/: __init__.py  app.py  application.py  config.py  gui.py  tello_controller.py
src/drone_ai/constants/: __init__.py  config_defaults.py  runtime.py  tracking.py  vision.py
src/drone_ai/storage/: __init__.py  face_repository.py
src/drone_ai/tracking/: __init__.py  face_tracker.py
src/drone_ai/vision/: __init__.py  detector.py  embedder.py  head_pose.py  overlay.py  pipeline.py  recognizer.py  schemas.py  types.py
tests/: test_application_tracking.py  test_detector.py  test_embedder.py  test_face_repository.py  test_face_tracker.py  test_head_pose.py  test_overlay.py  test_recognizer.py
